syntax="proto3";

package test;

option go_package = "./pb";

service Test {
    rpc TestRPC (TestRequest) returns (TestResponse) {}
}

message TestRequest {
    string message= 1;
}

message TestResponse {
    string message = 1;
}